dev/tests/cases/neg/34_multi_dot_literal.tv
df main() -> void {
    fixed version: f64 = 0.1.0;
    echo!(version);
}
